fixing unit tests and also refactoring code/formatting