@@ -7,7 +7,6 @@ import com.laderrco.fortunelink.portfolio.infrastructure.persistence.entities.Fe
 import com.laderrco.fortunelink.portfolio.infrastructure.persistence.entities.PortfolioJpaEntity;
 import com.laderrco.fortunelink.portfolio.infrastructure.persistence.entities.TransactionJpaEntity;
 import com.laderrco.fortunelink.portfolio.infrastructure.persistence.valueobjects.FeeAggregationResult;
-
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.List;
@@ -18,35 +17,35 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.data.jpa.test.autoconfigure.DataJpaTest;
 import org.springframework.boot.jdbc.test.autoconfigure.AutoConfigureTestDatabase;
 import org.springframework.boot.jpa.test.autoconfigure.TestEntityManager;
+import org.springframework.boot.persistence.autoconfigure.EntityScan;
 import org.springframework.boot.testcontainers.service.connection.ServiceConnection;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.FilterType;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.test.context.ActiveProfiles;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
-@DataJpaTest
+@DataJpaTest(includeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = {
+    JpaTransactionRepository.class, JpaPortfolioRepository.class}))
 @Testcontainers
 @ActiveProfiles("test")
+@EntityScan(basePackages = "com.laderrco.fortunelink.portfolio.infrastructure.persistence.entities")
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 class JpaTransactionRepositoryTest {
   @Container
   @ServiceConnection
   static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:17.9-alpine");
-
+  private final UUID TEST_USER_ID = UUID.fromString("00000000-0000-0000-0000-000000000000");
   @Autowired
   private JdbcTemplate jdbcTemplate;
-
   @Autowired
   private JpaPortfolioRepository portfolioRepository;
-
   @Autowired
   private TestEntityManager entityManager;
-
   @Autowired
   private JpaTransactionRepository jpaRepository;
-
-  private final UUID TEST_USER_ID = UUID.fromString("00000000-0000-0000-0000-000000000000");
 
   @BeforeEach
   void setUp() {
@@ -61,42 +60,24 @@ class JpaTransactionRepositoryTest {
   void shouldProperlyProjectAggregatedFees() {
     // Given
     UUID portfolioId = UUID.randomUUID();
-    PortfolioJpaEntity portfolio = PortfolioJpaEntity.create(
-        portfolioId,
+    PortfolioJpaEntity portfolio = PortfolioJpaEntity.create(portfolioId,
         TEST_USER_ID, // Matches the seeded user
-        "Portfolio name",
-        "DESC",
-        "CAD",
-        false,
-        null,
-        null,
-        Instant.now(),
-        Instant.now());
+        "Portfolio name", "DESC", "CAD", false, null, null, Instant.now(), Instant.now());
 
     // Use persist and flush for cleaner lifecycle management in DataJpaTest
     entityManager.persist(portfolio);
     portfolioRepository.save(portfolio);
 
     UUID accountId = UUID.randomUUID();
-    AccountJpaEntity account = AccountJpaEntity.create(
-        accountId,
-        portfolio,
-        "Account name",
-        "TFSA",
-        "CAD",
-        "ACB",
-        "HEALTHY",
-        "ACTIVE",
-        BigDecimal.valueOf(10000),
-        "CAD",
-        null,
-        Instant.now(),
+    AccountJpaEntity account = AccountJpaEntity.create(accountId, portfolio, "Account name", "TFSA",
+        "CAD", "ACB", "HEALTHY", "ACTIVE", BigDecimal.valueOf(10000), "CAD", null, Instant.now(),
         Instant.now());
 
     portfolio.replaceAccounts(List.of(account));
     entityManager.merge(portfolio);
 
     TransactionJpaEntity tx = createTestTransaction(accountId, portfolioId);
+    tx.setIdempotencyKey(UUID.randomUUID().toString());
     tx.setAccountId(accountId);
     tx.setExecutionSymbol("AAPL");
     tx.setTransactionType("BUY");
@@ -105,8 +86,7 @@ class JpaTransactionRepositoryTest {
     tx.setCashDeltaAmount(new BigDecimal("-1000.00"));
     tx.setMetadataSource("MANUAL");
 
-    FeeJpaEntity fee = FeeJpaEntity.create(
-        tx, "BROKERAGE", null, "CAD", null, null, null, null,
+    FeeJpaEntity fee = FeeJpaEntity.create(tx, "BROKERAGE", null, "CAD", null, null, null, null,
         null, null, Instant.now());
     fee.setNativeAmount(new BigDecimal("10.50"));
     fee.setNativeCurrency("CAD");
@@ -122,7 +102,7 @@ class JpaTransactionRepositoryTest {
 
     // Then
     assertThat(results).hasSize(1);
-    FeeAggregationResult result = results.get(0);
+    FeeAggregationResult result = results.getFirst();
 
     assertThat(result.getAccountId()).isEqualTo(accountId);
     assertThat(result.getSymbol()).isEqualTo("AAPL");
